syntax = "proto3";

package proto;

option java_package = "com.hederahashgraph.api.proto.java";
option java_multiple_files = true;

import "BasicTypes.proto";
import "QueryHeader.proto";
import "ResponseHeader.proto";
import "ConsensusTopicDefinition.proto";
import "ConsensusTopicInfo.proto";
import "ConsensusTopicState.proto";

// See [ConsensusService.getTopicInfo()](#proto.ConsensusService)
message ConsensusGetTopicInfoQuery {
    // Standard info sent from client to node, including the signed payment, and what kind of response is requested
    // (cost, state proof, both, or neither).
    QueryHeader header = 1;

    TopicID topicID = 2; // Topic to retrieve info about (the parameters and running state of).
}

// Retrieve the parameters of and state of a consensus topic.
message ConsensusGetTopicInfoResponse {
    // Standard response from node to client, including the requested fields: cost, or state proof, or both, or neither.
    ResponseHeader header = 1;

    TopicID topicID = 2; // Topic identifier.

    ConsensusTopicDefinition topicDefinition = 3 [deprecated = true];  // Deprecated and to be removed before HCS release.
    ConsensusTopicState topicState = 4 [deprecated = true];  // Deprecated and to be removed before HCS release.

    ConsensusTopicInfo topicInfo = 5; // Current state of the topic
}
